partial linting commit.